packages/coln-compiler/test/weighted.output
-- elaborated


-- messages

warning[W0101]: Defaulted precedence of ~> to the same as +
3 |   E : V -> V -> Int ~> Set
3 |                     ^^

error[E0208]: unexpected notation for term in synthesizing position: Infix
3 |   E : V -> V -> Int ~> Set
3 |                 ^^^^^^^^^^

error[E0201]: identifier WeightedGraph not in scope
6 | theory Q (G : WeightedGraph) := sig
6 |               ^^^^^^^^^^^^^
